[gd_scene load_steps=3 format=3 uid="uid://ci16ieydoksfi"]

[ext_resource type="Script" uid="uid://jdp30wkkqbqg" path="res://scripts/menu_equip.gd" id="1_xvr4w"]
[ext_resource type="Texture2D" uid="uid://kdtmsgxgeyca" path="res://sprites/portraits/blackmage.png" id="2_jpdmx"]

[node name="EquipMenu" type="MarginContainer"]
clip_contents = true
offset_left = 70.0
offset_top = 16.0
offset_right = 568.0
offset_bottom = 336.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_xvr4w")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Left" type="Button" parent="HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
text = "◀ L"

[node name="NameBox" type="PanelContainer" parent="HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/NameBox"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="Right" type="Button" parent="HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
text = "R ▶"

[node name="CharInfo" type="PanelContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("2_jpdmx")
expand_mode = 1

[node name="Column1" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MarginContainer2" type="GridContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Head" type="Button" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Head"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Head/MarginContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Head/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="name" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Head/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DX" type="Button" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/DX"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/DX/MarginContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/DX/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="name" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/DX/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Body" type="Button" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Body/MarginContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Body/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="name" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Body/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SX" type="Button" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/SX"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/SX/MarginContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/SX/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="name" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/SX/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Legs" type="Button" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Legs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Legs/MarginContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Legs/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="name" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Legs/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Acc1" type="Button" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Acc1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Acc1/MarginContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Acc1/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="name" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Acc1/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Arms" type="Button" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Arms"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Arms/MarginContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Arms/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="name" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Arms/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Acc2" type="Button" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Acc2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Acc2/MarginContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Acc2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="name" type="Label" parent="HBoxContainer/MarginContainer/CharInfo/HBoxContainer/Column1/MarginContainer2/Acc2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DescriptionPanel" type="PanelContainer" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Description" type="Label" parent="HBoxContainer/MarginContainer/DescriptionPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "DESCRIZIONE"

[node name="ButtonPanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="esc" type="Button" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "close"

[node name="optimize" type="Button" parent="HBoxContainer/ButtonPanel"]
layout_mode = 2
text = "Optimize"

[node name="space" type="PanelContainer" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3

[node name="Info" type="PanelContainer" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ButtonPanel/Info"]
layout_mode = 2

[node name="Gold" type="HBoxContainer" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Gold"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Gold:"

[node name="Gold" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Gold"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Time" type="HBoxContainer" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Time"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Time:"

[node name="Time" type="Label" parent="HBoxContainer/ButtonPanel/Info/VBoxContainer/Time"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/esc" to="." method="_on_esc_pressed"]
